# pycon-sql-llm

./: .gitignore  .nojekyll  .pre-commit-config.yaml  .secrets.baseline  README.md  TODO.html  Untitled.html  _brand.yml  _quarto.yml  _quarto_internal_scss_error.scss  buffer.html  buffer.qmd  config-custom.yaml  config.yaml  custom.css  custom.scss  messages.json  models.py  pyproject.toml  response_format.py  robots.txt  rzip.py  search.json  sitemap.xml  slides.html  slides.qmd  slides.quarto_ipynb  slides.tex  styles.css  tasks.py  test.py
__marimo__/session/: code.py.json  test.py.json
_extensions/royfrancis/reveal-logo/: _extension.yml
_extensions/shafayetShafee/reveal-header/: reveal-header.lua
_extensions/shafayetShafee/reveal-header/resources/js/: sc_sb_title.js
_internal/: TODO.md
img/: Untitled.html  ibm-granite-leaderboard
ipynb/: slides.ipynb  slides.py
site_libs/bootstrap/: bootstrap-2340e583e59ea4f603415b3e06c44c3e.min.css
sql_with_llms.egg-info/: PKG-INFO  requires.txt
src/sql_with_llms/: debug.py  main.py
src/sql_with_llms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
