[project]
name = "sql-llms-pyconke-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "fsspec[http,libarchive,tqdm]>=2025.9.0",
    "invoke>=2.2.0",
    "jupyter>=1.1.1",
    "litellm[proxy]>=1.63.11",
    "marimo>=0.15.5",
    "ollama>=0.5.4",
    "pandas>=2.3.0",
    "pdbpp>=0.11.7",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[tool.uv.workspace]
members = [
    "demo/demo-cli",
]
