[project]
name = "sql-with-llms"
version = "0.1.0"
description = "Code and Slides for PyCon 2025"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "cheap-repr>=0.5.2",
    "datasets>=4.1.1",
    "diskcache>=5.6.3",
    "fsspec[http,libarchive,tqdm]>=2025.9.0",
    "invoke>=2.2.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "jupytext>=1.17.3",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langgraph>=0.6.7",
    "litellm[caching,proxy]>=1.63.7",
    # "marimo>=0.15.5",
    # "ollama>=0.5.4",
    # "openai==1.61.0",
    # "pandas>=2.3.0",
    "loguru>=0.7.3",
    "ollama>=0.5.4",
    "pdbpp>=0.11.7",
    "pretty-loguru>=1.2.0",
    "prisma>=0.15.0",
    "pydantic-settings>=2.10.1",
    "pydot>=4.0.1",
    "pyfzf>=0.3.1",
    "requests>=2.32.4",
    "rich>=14.1.0",
    # "seaborn>=0.13.2",
    # "tabulate>=0.9.0",
    "textual>=6.1.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "invoke>=2.2.0",
]
